Fix the Russian info tokens
Some words were too long, causing the info token to need a horizontal
scroll bar. This commit reduces the size of the text in the info tokens
for Russian so that they fit correctly.

--- a/assets/scss/components/_info-token.scss
+++ b/assets/scss/components/_info-token.scss
@@ -45,6 +45,10 @@
     margin: 0;
     color: #fff;
 
+    &:lang(ru) {
+        font-size: clamp(1rem, 8vw, 3rem);
+    }
+
     > strong {
         font-family: var(--serif-font);
         font-size: 1.1em;
